@@ -69,6 +69,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #7975: correct regression in dict methods supported by bsddb.dbshelve.
+
 - Issue #7959: ctypes callback functions are now registered correctly
   with the cylce garbage collector.
 
